# xgen_app

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  Dockerfile.dev  README.md  TAURI_BUILD_NOTES.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  sample.env
.github/workflows/: build-windows.yml
docs/: PLAN-ai-chatbot-v2.md  PLAN-ai-chatbot.md  XGEN-KNOWLEDGE.md
docs/work-logs/: 2026-01-04.md  26-01-04-api-abstraction.md
scripts/: build-sidecar.sh  build.sh  patch-api-auth.js  patch-canvas-chatbot.js  patch-frontend.sh  patch-sidebar-cli.js  sync-frontend.sh
src-cli/: cli.html
src-cli/cliSection/components/: CliPanel.module.scss  CliPanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  proxy_server.rs  tunnel.rs
src-tauri/src/commands/: cli.rs  gpu.rs  llm.rs  mcp.rs  mod.rs  mode.rs  model.rs  proxy.rs  settings.rs  sidecar.rs
src-tauri/src/gpu/: detection.rs  mod.rs
src-tauri/src/services/: inference.rs  llm_client.rs  mcp_manager.rs  mod.rs  model_manager.rs  sidecar_manager.rs  tool_search.rs  xgen_api.rs
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/tests/: cli_integration.rs
src/app/_common/icons/: canvasIcons.tsx
src/app/canvas/: page.tsx  types.ts
src/app/canvas/components/: ExecutionPanel.tsx  Header.tsx  HistoryPanel.tsx  SideMenu.tsx
src/app/canvas/components/Canvas/: index.tsx
src/app/canvas/components/Helper/: NodeList.tsx  (+1 more)
src/app/chatbot/: StandaloneChatClient.tsx
src/app/chatbot/embed/: EmbedClient.tsx
src/lib/tauri/: gpu.ts  index.ts  llm.ts  mcp.ts  mode.ts  model.ts  sidecar.ts  types.ts
(+10 files in other folders)
