[package]
name = "app"
version = "0.1.0"
description = "XGEN Desktop App - Personalized AI Workstation"
authors = ["XGEN Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# === Tauri Core ===
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2.5.5"

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Async Runtime ===
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# === Error Handling ===
thiserror = "2.0"
anyhow = "1.0"

# === Logging ===
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# === System Info ===
sysinfo = "0.32"

# === HTTP Client ===
reqwest = { version = "0.12", features = ["json", "stream"] }

# === HTTP Server (for local LLM proxy) ===
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# === Tunnel (bore - self-hosted) ===
# No external dependency needed - implemented in tunnel.rs

# === Database ===
rusqlite = { version = "0.32", features = ["bundled"] }

# === Utilities ===
uuid = { version = "1.11", features = ["v4", "serde"] }
directories = "5"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# === Document Processing ===
# dotext = "0.3"  # Phase 2에서 활성화

# === Vector DB (Phase 2에서 활성화) ===
# lancedb = "0.13"

[features]
default = []
